MPD_sima v0.12.2

 * Add some randomness to track selection
 * Do not queue artists already queued (regression)
 * Some refactoring in http client

-- kaliko jack <kaliko@azylum.org>  Tue, 01 Jul 2014 21:47:56 +0200


MPD_sima v0.12.1

 * Fixed SIGHUP error, need python-musicpd >= 0.4.1
 * Add core plugin to detect multiple MPD_sima instance on the same MPD host
 * Fixed startup robustness
 * Removed timestamp in console logging

-- kaliko jack <kaliko@azylum.org>  Sat, 21 Jun 2014 14:02:17 +0200


MPD_sima v0.12.0

 * Major refactoring
 * Add a setup.py, got rid of the Makefile.
 * Switched to Python3 (>=3.2)
 * Depends on requests (http client)
 * Depends on python-musicpd (py3k port of python-mpd)
   configuration file change
   internal database remains the same
 * Temporarily removed userdb feature
 * Base artist for similarity is the last track queued
 * Persistent http caching

-- kaliko jack <kaliko@azylum.org> Mon, 16 Jun 2014 10:37:14 +0200


MPD_sima v0.11.0

 * straight forward py3k conversion from v0.10.0

-- kaliko jack <kaliko@azylum.org> UNRELEASED


MPD_sima v0.10.0

 * Improved album detection (especially multi-artists album)
 * Controls conf file is readable at startup
 * Complete rewrite of MPD client

-- kaliko jack <kaliko@azylum.org>  Wed, 26 Sep 2012 18:56:57 +0200


MPD_sima v0.9.2

 * Fixed Makefile, thanks Artur Frysiak (fixes #2849 #2848)

-- kaliko jack <kaliko@azylum.org>  Sun, 26 Feb 2012 22:06:27 +0100


MPD_sima v0.9.1

 * Fixed an issue in idle implementation

-- kaliko jack <kaliko@azylum.org>  Fri, 24 Feb 2012 12:04:39 +0100


MPD_sima v0.9.0

 * New CLI option --create-db
 * Option main_loop_time removed, use of idle makes it useless
 * New config file option "dynamic" (fixes #2593)

 Refactoring:
 * Start player abstraction, new MPD class (fixes #2418)
 * Use idle MPD command, needs python-mpd >= 0.3

 Bugs fix:
 * PID file creation now respects system umask (fixes #2368)
 * Avoid to queue twice the same album (fixes #2595)