@@ -32,4 +32,10 @@ class TestTrackObject(unittest.TestCase):
     def test_boolean_type(self):
         self.assertFalse(bool(Track()))
 
+    def test_albumartist(self):
+        trk = Track(albumartist='album_artist', artist='track_artist')
+        self.assertEqual(trk.artist.name, 'album_artist')
+        trk = Track(artist='track_artist')
+        self.assertEqual(trk.artist.name, 'track_artist')
+
 # vim: ai ts=4 sw=4 sts=4 expandtab
